# provekit

./: .gitignore  .gitmodules  Cargo.toml  README.md  output.txt  rust-toolchain.toml
.github/workflows/: benchmark.yml  ci.yml  end-to-end.yml
block-multiplier/: Cargo.toml  build.rs
block-multiplier-codegen/src/: main.rs  scalar.rs  simd.rs
block-multiplier/src/: lib.rs  scalar.rs  test_utils.rs
block-multiplier/src/aarch64/: mod.rs
docs/: docusaurus.config.ts  pnpm-lock.yaml
docs/docs/: contributing.md  intro.md
docs/docs/api/: noir-r1cs.md
docs/docs/architecture/: block-multiplier.md  overview.md  skyscraper.md
docs/docs/examples/: poseidon-hash.md  sha256.md
docs/docs/getting-started/: installation.md  quick-start.md
docs/docs/performance/: benchmarking.md
docs/docs/tutorials/: basic-proof.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.tsx
fp-rounding/: Cargo.toml
gnark-whir/: Dockerfile  README.md  circuit.go  complete_age_check_test.go  docker-compose.yml  go.mod  go.sum  main.go  mt.go  spark_utilities.go  whir_utilities.go
gnark-whir/app/circuit/: circuit.go  common.go  types.go  utilities.go  whir_utilities.go
gnark-whir/app/utilities/: utilities.go
gnark-whir/cmd/cli/: main.go
gnark-whir/cmd/server/: main.go
gnark-whir/scripts/: keys.py  start.sh
gnark-whir/utilities/: utilities.go
hla/: Cargo.toml
hla/src/: frontend.rs
merkle-hash-bench/: Cargo.toml
merkle-hash-bench/src/hashes/: blake2s_stwo.rs  blake3.rs  blake3_naive.rs  icicle.rs  keccak_api.rs  mod.rs  plonky3.rs  poseidon2_t2_ruint.rs  zkhash.rs
merkle-hash-bench/src/mod_ring/: mod.rs  ruint.rs
mod256-generator/src/: lib.rs
noir-examples/complete_age_check/: Nargo.toml
noir-examples/noir-bignum/src/: bignum.nr  constants.nr  lib.nr  params.nr  runtime_bignum.nr
noir-examples/noir-bignum/src/fns/: constrained_ops.nr  expressions.nr  serialization.nr  unconstrained_helpers.nr  unconstrained_ops.nr
noir-examples/noir-bignum/src/utils/: split_bits.nr
noir-examples/noir-native-sha256/: Nargo.toml
noir-examples/noir-passport-examples/: README.md
noir-examples/noir-passport-examples/complete_age_check/: Nargo.toml
noir-examples/noir-passport-examples/noir_native_sha256/src/: ryan_sha256_noir.nr
noir-examples/noir-passport-examples/zkpassport_libs/commitment/common/src/: lib.nr
noir-examples/noir-passport-examples/zkpassport_libs/data-check/integrity/: Nargo.toml
noir-examples/noir-passport-examples/zkpassport_libs/data-check/integrity/src/: lib.nr
noir-examples/noir-passport-examples/zkpassport_libs/sig-check/rsa/: Nargo.toml
noir-examples/noir-passport-examples/zkpassport_libs/sig-check/rsa/src/: lib.nr
noir-examples/noir-passport-examples/zkpassport_libs/utils/src/: lib.nr
noir-examples/noir-r1cs-test-programs/range-check-u16/src/: main.nr
noir-examples/noir-r1cs-test-programs/range-check-u8/src/: main.nr
noir-examples/noir-r1cs-test-programs/small-sha/: Nargo.toml
noir-examples/noir_sha256/src/: sha256.nr
noir-examples/zkpassport_libs/data-check/integrity/: Nargo.toml
noir-r1cs/: Cargo.toml  README.md
noir-r1cs-logup/src/: digits.rs  main.rs  ram.rs  range_check.rs  rom.rs  sparse_matrix.rs  test_compiler.rs
noir-r1cs/benches/: bench.rs  poseidon-1000.np
noir-r1cs/noir-examples/basic/: Prover.toml
noir-r1cs/noir-examples/basic/src/: main.nr
noir-r1cs/noir-examples/poseidon/: Prover.toml
noir-r1cs/noir-examples/poseidon-rounds/: Prover.toml
noir-r1cs/noir-examples/poseidon/src/: main.nr
noir-r1cs/noir-examples/sha256-blackbox/: Prover.toml
noir-r1cs/noir-examples/sha256-blackbox/src/: main.nr
noir-r1cs/src/: compiler.rs  digits.rs  gnark_config.rs  grand_product_argument.rs  lib.rs  main.rs  memory_check.rs  noir_proof_scheme.rs  noir_to_r1cs.rs  noir_witness.rs  r1cs.rs  ram.rs  spark.rs  sparse_matrix.rs  test_functions.rs  whir_r1cs.rs
noir-r1cs/src/cli/: main.rs  span_stats.rs
noir-r1cs/src/cli/cmd/: generate_gnark_inputs.rs  prove.rs
noir-r1cs/src/r1cs/: acir_source.rs  matrix_sink.rs  mod.rs
noir-r1cs/src/skyscraper/: skyscraper_pow.rs
noir-r1cs/src/utils/: file_io.rs  mod.rs  sumcheck.rs  zk_utils.rs
noir-r1cs/tests/: compiler.rs
noir-tools/: Cargo.toml
noir-tools/src/: lib.rs  serializable_program.rs
scripts/dev/: keys.py
skyscraper/: Cargo.toml
skyscraper-evm/: README.md  foundry.toml
skyscraper-evm/src/: Skyscraper.sol
skyscraper-evm/test/: Skyscraper.sol
skyscraper-noir/: Nargo.toml  README.md
skyscraper-noir-bench/: Nargo.toml
skyscraper-noir-bench/src/: main.nr
skyscraper-noir/src/: lib.nr
spark/: .gitignore  README.md
spark/spark-prover/: Cargo.toml
spark/spark-prover/src/: gpa.rs  lib.rs  main.rs  memory.rs  spark.rs  utilities.rs  whir.rs
spark/spark-prover/src/utilities/: mod.rs
spark/spark-prover/src/utilities/iopattern/: mod.rs
spark/spark-prover/src/utilities/matrix/: mod.rs
spark/spark-verifier/: go.mod  main.go
tensor/: Cargo.toml
tensor/src/: layout.rs  lib.rs
