[package]
name = "merkle-hash-bench"
version = "0.1.0"
edition = "2021"

[features]
default = ["plonky3", "zkhash"]
plonky3 = [
  "dep:p3-bn254-fr",
  "dep:p3-goldilocks",
  "dep:p3-mersenne-31",
  "dep:p3-field",
  "dep:p3-poseidon2",
  "dep:p3-symmetric",
  "dep:p3-monolith",
  "dep:p3-rescue",
]
# icicle = [
#   "dep:icicle-core",
#   "dep:icicle-runtime",
#   "dep:icicle-hash",
#   "dep:icicle-bn254",
#   "dep:icicle-m31",
# ]
zkhash = ["dep:zkhash"]
stwo = ["dep:stwo-prover"]

[lints]
workspace = true

[dependencies]
ruint.workspace = true
rand.workspace = true
subtle.workspace = true
bytemuck.workspace = true
hex-literal.workspace = true
argh.workspace = true
anyhow.workspace = true

ark-ff.workspace = true
arrayvec.workspace = true
blake3.workspace = true
halo2curves.workspace = true
num-traits.workspace = true
sha3.workspace = true
zerocopy.workspace = true
linkme.workspace = true
gensym.workspace = true

skyscraper.workspace = true

# Plonky 3
p3-bn254-fr = { workspace = true, optional = true, features = ["table"] }
p3-goldilocks = { workspace = true, optional = true }
p3-mersenne-31 = { workspace = true, optional = true }
p3-field = { workspace = true, optional = true }
p3-poseidon2 = { workspace = true, optional = true }
p3-monolith = { workspace = true, optional = true }
p3-rescue = { workspace = true, optional = true }
p3-symmetric = { workspace = true, optional = true }

# Icicle dependenciesp3-bn254-fr = { version = "0.2.0", features = ["table"] }
# icicle-core = { workspace = true, optional = true }
# icicle-runtime = { workspace = true, optional = true }
# icicle-hash = { workspace = true, optional = true }
# icicle-bn254 = { workspace = true, optional = true }
# icicle-m31 = { workspace = true, optional = true }

# ZKHash
zkhash = { workspace = true, optional = true }

# Stwo
stwo-prover = { workspace = true, optional = true }
