[package]
name = "noir-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

acir.workspace = true
acvm.workspace = true
acir_field.workspace = true
noirc_abi.workspace = true
noirc_artifacts.workspace = true
noirc_printable_type.workspace = true
bn254_blackbox_solver.workspace = true
nargo.workspace = true
nargo_toml.workspace = true
noirc_driver.workspace = true
noirc_errors.workspace = true
fm.workspace = true
nargo_cli.workspace = true
noir_artifact_cli.workspace = true

[lints]
workspace = true
