[package]
name = "spark-prover"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
noir-r1cs.workspace = true
serde_json.workspace = true

[lints]
workspace = true